grammar/nintParser.py
# Generated from nint.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


import sys
sys.path.append("C:/dev/compiler")
from icg.Node import Node
from icg.Expr import Expr
from icg.Op import Op
from icg.Arith import Arith
from icg.Stmt import Stmt
from icg.Seq import Seq




class nintParser ( Parser ):

    grammarFileName = "nint.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'bool'", "'data.frame'", "'else'",
                     "'factor'", "'float'", "'for'", "'function'", "'if'",
                     "'input'", "'int'", "'null'", "'print'", "'return'",
                     "'string'", "'void'", "'while'", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "','", "'.'", "'{'", "'['", "'('", "'}'",
                     "']'", "'::'", "')'", "';'", "'+'", "'&&'", "'='",
                     "'!'", "'/'", "'=='", "'**'", "'>'", "'>='", "'<='",
                     "'<'", "'*'", "'!='", "'||'", "'>>'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "BOOL", "DF", "ELSE", "FACTOR",
                      "FLOAT", "FOR", "FUN", "IF", "INPUT", "INT", "NULL",
                      "PRINT", "RETURN", "STRING", "VOID", "WHILE", "BOOL_LITERAL",
                      "FLOAT_LITERAL", "ID", "DIGIT", "INT_LITERAL", "RANGE",
                      "STRING_LITERAL", "COMMA", "DOT", "LBRACE", "LBRACK",
                      "LPAREN", "RBRACE", "RBRACK", "RETURNSTYPE", "RPAREN",
                      "SEMICOLON", "ADD", "AND", "ASSIGN", "BANG", "DIV",
                      "EQUAL", "EXP", "GT", "GTE", "LE", "LTE", "MUL", "NOTEQUAL",
                      "OR", "PIPE", "SUB", "COMMENT", "LINE_COMMENT", "WS",
                      "NL" ]

    RULE_prog = 0
    RULE_primary = 1
    RULE_block = 2
    RULE_statement = 3
    RULE_expression = 4
    RULE_expressionList = 5
    RULE_literal = 6
    RULE_forInit = 7
    RULE_indexList = 8
    RULE_declaration = 9
    RULE_declarator = 10
    RULE_initalizer = 11
    RULE_vectorInitializer = 12
    RULE_functionDeclaration = 13
    RULE_typeSpecifier = 14
    RULE_parameterList = 15
    RULE_parameterDeclaration = 16
    RULE_functionCall = 17
    RULE_callArgs = 18
    RULE_pipeStmt = 19

    ruleNames =  [ "prog", "primary", "block", "statement", "expression",
                   "expressionList", "literal", "forInit", "indexList",
                   "declaration", "declarator", "initalizer", "vectorInitializer",
                   "functionDeclaration", "typeSpecifier", "parameterList",
                   "parameterDeclaration", "functionCall", "callArgs", "pipeStmt" ]

    EOF = Token.EOF
    T__0=1
    BOOL=2
    DF=3
    ELSE=4
    FACTOR=5
    FLOAT=6
    FOR=7
    FUN=8
    IF=9
    INPUT=10
    INT=11
    NULL=12
    PRINT=13
    RETURN=14
    STRING=15
    VOID=16
    WHILE=17
    BOOL_LITERAL=18
    FLOAT_LITERAL=19
    ID=20
    DIGIT=21
    INT_LITERAL=22
    RANGE=23
    STRING_LITERAL=24
    COMMA=25
    DOT=26
    LBRACE=27
    LBRACK=28
    LPAREN=29
    RBRACE=30
    RBRACK=31
    RETURNSTYPE=32
    RPAREN=33
    SEMICOLON=34
    ADD=35
    AND=36
    ASSIGN=37
    BANG=38
    DIV=39
    EQUAL=40
    EXP=41
    GT=42
    GTE=43
    LE=44
    LTE=45
    MUL=46
    NOTEQUAL=47
    OR=48
    PIPE=49
    SUB=50
    COMMENT=51
    LINE_COMMENT=52
    WS=53
    NL=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s = None
            self._statement = None # StatementContext
            self.stats = list() # of StatementContexts

        def EOF(self):
            return self.getToken(nintParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(nintParser.NL)
            else:
                return self.getToken(nintParser.NL, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nintParser.StatementContext)
            else:
                return self.getTypedRuleContext(nintParser.StatementContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(nintParser.SEMICOLON)
            else:
                return self.getToken(nintParser.SEMICOLON, i)

        def getRuleIndex(self):
            return nintParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = nintParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)

        s = None

        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << nintParser.BOOL) | (1 << nintParser.DF) | (1 << nintParser.FACTOR) | (1 << nintParser.FLOAT) | (1 << nintParser.FOR) | (1 << nintParser.FUN) | (1 << nintParser.IF) | (1 << nintParser.INT) | (1 << nintParser.NULL) | (1 << nintParser.RETURN) | (1 << nintParser.STRING) | (1 << nintParser.VOID) | (1 << nintParser.WHILE) | (1 << nintParser.BOOL_LITERAL) | (1 << nintParser.FLOAT_LITERAL) | (1 << nintParser.ID) | (1 << nintParser.INT_LITERAL) | (1 << nintParser.RANGE) | (1 << nintParser.STRING_LITERAL) | (1 << nintParser.LBRACE) | (1 << nintParser.LPAREN) | (1 << nintParser.BANG) | (1 << nintParser.SUB) | (1 << nintParser.NL))) != 0):
                self.state = 48
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [nintParser.BOOL, nintParser.DF, nintParser.FACTOR, nintParser.FLOAT, nintParser.FOR, nintParser.FUN, nintParser.IF, nintParser.INT, nintParser.NULL, nintParser.RETURN, nintParser.STRING, nintParser.VOID, nintParser.WHILE, nintParser.BOOL_LITERAL, nintParser.FLOAT_LITERAL, nintParser.ID, nintParser.INT_LITERAL, nintParser.RANGE, nintParser.STRING_LITERAL, nintParser.LBRACE, nintParser.LPAREN, nintParser.BANG, nintParser.SUB]:
                    self.state = 40
                    localctx._statement = self.statement()
                    localctx.stats.append(localctx._statement)
                    self.state = 44
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 41
                            _la = self._input.LA(1)
                            if not(_la==nintParser.SEMICOLON or _la==nintParser.NL):
                                self._errHandler.recoverInline(self)
                            else:
                                self._errHandler.reportMatch(self)
                                self.consume()
                        self.state = 46
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                    pass
                elif token in [nintParser.NL]:
                    self.state = 47
                    self.match(nintParser.NL)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            localctx.s = Seq(list(map(lambda x: x.stmt, localctx.stats)))
            self.state = 54
            self.match(nintParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(nintParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(nintParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(nintParser.RPAREN, 0)

        def literal(self):
            return self.getTypedRuleContext(nintParser.LiteralContext,0)


        def ID(self):
            return self.getToken(nintParser.ID, 0)

        def getRuleIndex(self):
            return nintParser.RULE_primary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary" ):
                listener.enterPrimary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary" ):
                listener.exitPrimary(self)




    def primary(self):

        localctx = nintParser.PrimaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_primary)
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.match(nintParser.LPAREN)
                self.state = 57
                self.expression(0)
                self.state = 58
                self.match(nintParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.literal()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(nintParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(nintParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(nintParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nintParser.StatementContext)
            else:
                return self.getTypedRuleContext(nintParser.StatementContext,i)


        def getRuleIndex(self):
            return nintParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = nintParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(nintParser.LBRACE)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << nintParser.BOOL) | (1 << nintParser.DF) | (1 << nintParser.FACTOR) | (1 << nintParser.FLOAT) | (1 << nintParser.FOR) | (1 << nintParser.FUN) | (1 << nintParser.IF) | (1 << nintParser.INT) | (1 << nintParser.NULL) | (1 << nintParser.RETURN) | (1 << nintParser.STRING) | (1 << nintParser.VOID) | (1 << nintParser.WHILE) | (1 << nintParser.BOOL_LITERAL) | (1 << nintParser.FLOAT_LITERAL) | (1 << nintParser.ID) | (1 << nintParser.INT_LITERAL) | (1 << nintParser.RANGE) | (1 << nintParser.STRING_LITERAL) | (1 << nintParser.LBRACE) | (1 << nintParser.LPAREN) | (1 << nintParser.BANG) | (1 << nintParser.SUB))) != 0):
                self.state = 65
                self.statement()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.match(nintParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.stmt = None
            self.exp = None # ExpressionContext

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nintParser.BlockContext)
            else:
                return self.getTypedRuleContext(nintParser.BlockContext,i)


        def IF(self):
            return self.getToken(nintParser.IF, 0)

        def LPAREN(self):
            return self.getToken(nintParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(nintParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(nintParser.RPAREN, 0)

        def ELSE(self):
            return self.getToken(nintParser.ELSE, 0)

        def FOR(self):
            return self.getToken(nintParser.FOR, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(nintParser.SEMICOLON)
            else:
                return self.getToken(nintParser.SEMICOLON, i)

        def forInit(self):
            return self.getTypedRuleContext(nintParser.ForInitContext,0)


        def expressionList(self):
            return self.getTypedRuleContext(nintParser.ExpressionListContext,0)


        def WHILE(self):
            return self.getToken(nintParser.WHILE, 0)

        def RETURN(self):
            return self.getToken(nintParser.RETURN, 0)

        def functionDeclaration(self):
            return self.getTypedRuleContext(nintParser.FunctionDeclarationContext,0)


        def declaration(self):
            return self.getTypedRuleContext(nintParser.DeclarationContext,0)


        def getRuleIndex(self):
            return nintParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = nintParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)

        stmt = None

        self._la = 0 # Token type
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [nintParser.LBRACE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.block()
                pass
            elif token in [nintParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(nintParser.IF)
                self.state = 75
                self.match(nintParser.LPAREN)
                self.state = 76
                self.expression(0)
                self.state = 77
                self.match(nintParser.RPAREN)
                self.state = 78
                self.block()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==nintParser.ELSE:
                    self.state = 79
                    self.match(nintParser.ELSE)
                    self.state = 80
                    self.block()


                pass
            elif token in [nintParser.FOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.match(nintParser.FOR)
                self.state = 84
                self.match(nintParser.LPAREN)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << nintParser.BOOL) | (1 << nintParser.DF) | (1 << nintParser.FACTOR) | (1 << nintParser.FLOAT) | (1 << nintParser.INT) | (1 << nintParser.NULL) | (1 << nintParser.STRING) | (1 << nintParser.VOID) | (1 << nintParser.BOOL_LITERAL) | (1 << nintParser.FLOAT_LITERAL) | (1 << nintParser.ID) | (1 << nintParser.INT_LITERAL) | (1 << nintParser.RANGE) | (1 << nintParser.STRING_LITERAL) | (1 << nintParser.LPAREN) | (1 << nintParser.BANG) | (1 << nintParser.SUB))) != 0):
                    self.state = 85
                    self.forInit()


                self.state = 88
                self.match(nintParser.SEMICOLON)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << nintParser.NULL) | (1 << nintParser.BOOL_LITERAL) | (1 << nintParser.FLOAT_LITERAL) | (1 << nintParser.ID) | (1 << nintParser.INT_LITERAL) | (1 << nintParser.RANGE) | (1 << nintParser.STRING_LITERAL) | (1 << nintParser.LPAREN) | (1 << nintParser.BANG) | (1 << nintParser.SUB))) != 0):
                    self.state = 89
                    self.expression(0)


                self.state = 92
                self.match(nintParser.SEMICOLON)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << nintParser.NULL) | (1 << nintParser.BOOL_LITERAL) | (1 << nintParser.FLOAT_LITERAL) | (1 << nintParser.ID) | (1 << nintParser.INT_LITERAL) | (1 << nintParser.RANGE) | (1 << nintParser.STRING_LITERAL) | (1 << nintParser.LPAREN) | (1 << nintParser.BANG) | (1 << nintParser.SUB))) != 0):
                    self.state = 93
                    self.expressionList()


                self.state = 96
                self.match(nintParser.RPAREN)
                self.state = 97
                self.block()
                pass
            elif token in [nintParser.WHILE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.match(nintParser.WHILE)
                self.state = 99
                self.match(nintParser.LPAREN)
                self.state = 100
                self.expression(0)
                self.state = 101
                self.match(nintParser.RPAREN)
                self.state = 102
                self.block()
                pass
            elif token in [nintParser.RETURN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.match(nintParser.RETURN)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << nintParser.NULL) | (1 << nintParser.BOOL_LITERAL) | (1 << nintParser.FLOAT_LITERAL) | (1 << nintParser.ID) | (1 << nintParser.INT_LITERAL) | (1 << nintParser.RANGE) | (1 << nintParser.STRING_LITERAL) | (1 << nintParser.LPAREN) | (1 << nintParser.BANG) | (1 << nintParser.SUB))) != 0):
                    self.state = 105
                    self.expression(0)


                self.state = 108
                self.match(nintParser.SEMICOLON)
                pass
            elif token in [nintParser.NULL, nintParser.BOOL_LITERAL, nintParser.FLOAT_LITERAL, nintParser.ID, nintParser.INT_LITERAL, nintParser.RANGE, nintParser.STRING_LITERAL, nintParser.LPAREN, nintParser.BANG, nintParser.SUB]:
                self.enterOuterAlt(localctx, 6)
                self.state = 109
                localctx.exp = self.expression(0)
                self.state = 110
                self.match(nintParser.SEMICOLON)
                localctx.stmt = localctx.exp.result
                pass
            elif token in [nintParser.FUN]:
                self.enterOuterAlt(localctx, 7)
                self.state = 113
                self.functionDeclaration()
                pass
            elif token in [nintParser.BOOL, nintParser.DF, nintParser.FACTOR, nintParser.FLOAT, nintParser.INT, nintParser.STRING, nintParser.VOID]:
                self.enterOuterAlt(localctx, 8)
                self.state = 114
                self.declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.result = None
            self.a = None # ExpressionContext
            self._primary = None # PrimaryContext
            self.bop = None # Token
            self.b = None # ExpressionContext

        def primary(self):
            return self.getTypedRuleContext(nintParser.PrimaryContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(nintParser.FunctionCallContext,0)


        def pipeStmt(self):
            return self.getTypedRuleContext(nintParser.PipeStmtContext,0)


        def SUB(self):
            return self.getToken(nintParser.SUB, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(nintParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(nintParser.ExpressionContext,i)


        def BANG(self):
            return self.getToken(nintParser.BANG, 0)

        def MUL(self):
            return self.getToken(nintParser.MUL, 0)

        def DIV(self):
            return self.getToken(nintParser.DIV, 0)

        def ADD(self):
            return self.getToken(nintParser.ADD, 0)

        def LE(self):
            return self.getToken(nintParser.LE, 0)

        def GTE(self):
            return self.getToken(nintParser.GTE, 0)

        def GT(self):
            return self.getToken(nintParser.GT, 0)

        def LTE(self):
            return self.getToken(nintParser.LTE, 0)

        def EQUAL(self):
            return self.getToken(nintParser.EQUAL, 0)

        def NOTEQUAL(self):
            return self.getToken(nintParser.NOTEQUAL, 0)

        def EXP(self):
            return self.getToken(nintParser.EXP, 0)

        def AND(self):
            return self.getToken(nintParser.AND, 0)

        def OR(self):
            return self.getToken(nintParser.OR, 0)

        def ASSIGN(self):
            return self.getToken(nintParser.ASSIGN, 0)

        def LBRACK(self):
            return self.getToken(nintParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(nintParser.RBRACK, 0)

        def indexList(self):
            return self.getTypedRuleContext(nintParser.IndexListContext,0)


        def getRuleIndex(self):
            return nintParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = nintParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)

        result = None

        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 118
                localctx._primary = self.primary()
                localctx.result = Expr((None if localctx._primary is None else self._input.getText((localctx._primary.start,localctx._primary.stop))), 'string')
                pass

            elif la_ == 2:
                self.state = 121
                self.functionCall()
                pass

            elif la_ == 3:
                self.state = 122
                self.pipeStmt()
                pass

            elif la_ == 4:
                self.state = 123
                self.match(nintParser.SUB)
                self.state = 124
                self.expression(10)
                pass

            elif la_ == 5:
                self.state = 125
                self.match(nintParser.BANG)
                self.state = 126
                self.expression(9)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 167
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 165
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = nintParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.a = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 129
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 130
                        localctx.bop = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==nintParser.DIV or _la==nintParser.MUL):
                            localctx.bop = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 131
                        localctx.b = self.expression(9)
                        localctx.result = Arith((None if localctx.bop is None else localctx.bop.text), localctx.a.result, localctx.b.result)
                        pass

                    elif la_ == 2:
                        localctx = nintParser.ExpressionContext(self, _parentctx, _parentState)
                        localctx.a = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 134
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 135
                        localctx.bop = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==nintParser.ADD or _la==nintParser.SUB):
                            localctx.bop = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 136
                        localctx.b = self.expression(8)
                        localctx.result = Arith((None if localctx.bop is None else localctx.bop.text), localctx.a.result, localctx.b.result);
                        pass

                    elif la_ == 3:
                        localctx = nintParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 139
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 140
                        localctx.bop = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << nintParser.GT) | (1 << nintParser.GTE) | (1 << nintParser.LE) | (1 << nintParser.LTE))) != 0)):
                            localctx.bop = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 141
                        self.expression(7)
                        pass

                    elif la_ == 4:
                        localctx = nintParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 142
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 143
                        localctx.bop = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==nintParser.EQUAL or _la==nintParser.NOTEQUAL):
                            localctx.bop = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 144
                        self.expression(6)
                        pass

                    elif la_ == 5:
                        localctx = nintParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 145
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 146
                        localctx.bop = self.match(nintParser.EXP)
                        self.state = 147
                        self.expression(4)
                        pass
